2007-03-12  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.18.1

==================== 2.18.0 ====================

2007-03-12  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* README:
	* configure.in: Version 2.18.0.

2007-02-26  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.18.0

==================== 2.17.92 ====================

2007-02-26  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* README:
	* configure.in: Version 2.17.92.

2007-02-21 Maxim Dziumanenko <dziumanenko@gmail.com>

	* uk.po: Update Ukrainian translation.

2007-02-20  Denis Washington  <denisw@svn.gnome.org>

	* desktop-directories/Preferences.directory:
	* desktop-directories/System-Settings.directory:
	Reverting the default use of the shell and use the menus for 2.18
	instead. The shell still needs some love and probably will be default
	for GNOME 2.20.
	
2007-02-13  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.17.92

==================== 2.17.91 ====================

2007-02-13  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* README:
	* configure.in: Version 2.17.91.

2007-02-06  Vincent Untz  <vuntz@gnome.org>

	* layout/settings.menu:
	* layout/preferences.menu: revert layout change to the one we had in
	2.16
	* desktop-directories/System-Settings.directory.in:
	* desktop-directories/Preferences.directory.in: mark those two
	directories with NoDisplay=true so they're hidden by default

	Patch by Denis Washington <dwashington@gmx.net>
	Fix gnome-menus part of bug #402797.

2007-01-17  Vincent Untz  <vuntz@gnome.org>

	* layout/preferences.menu: add some layout, so that categories are
	sorted in a more useful order.
	Patch by Denis Washington <dwashington@gmx.net>
	Fix bug #395774

2007-01-17  Vincent Untz  <vuntz@gnome.org>

	* layout/preferences.menu: fix categories. We shouldn't use
	non-registered categories that do not start with X-.
	Patch by Denis Washington <dwashington@gmx.net>
