@@ -1,3 +1,13 @@
+2007-05-01  Vincent Untz  <vuntz@gnome.org>
+
+	* simple-editor/GMenuSimpleEditor/maindialog.py: (__setup_menus_tree):
+	use SELECTION_BROWSE instead of SELECTION_SINGLE so the user can't
+	unselect a menu
+	(__menus_selection_changed): if there's no selection (happens if the
+	user searches the treeview), just set the entries list to show no
+	model
+	Fix bug #417273
+
 2007-03-12  Vincent Untz  <vuntz@gnome.org>
 
 	* configure.in: post-release bump to 2.18.1
